@@ -34,13 +34,13 @@
 */
 
 #ifdef __WIN32__
-# define TIEMU_VERSION "1.80-040915"		// For Win32
+# define TIEMU_VERSION "1.80-040923"		// For Win32
 #else
 # define TIEMU_VERSION VERSION
 #endif
-#define TIEMU_REQUIRES_LIBFILES_VERSION		"0.6.0"
+#define TIEMU_REQUIRES_LIBFILES_VERSION		"0.6.1"
 #define TIEMU_REQUIRES_LIBCABLES_VERSION	"3.8.1"
-#define TIEMU_REQUIRES_LIBCALCS_VERSION 	"4.5.3"
+#define TIEMU_REQUIRES_LIBCALCS_VERSION 	"4.5.4"
 
 #endif
 
